--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-
-server.port=80
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=pa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/basedatos
+spring.datasource.username=root
+spring.datasource.password=890718
 spring.jpa.hibernate.ddl-auto=create
