--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost/test?useSSL=false&serverTimeZone=UTC&allPublicKeyRetrieval=true
-spring.datasource.username = root
-spring.datasource.password = 890718
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.database-platform=org.hibernate.dialect.Mysql8Dialect
 #Mostrar mensajes SQL
 spring.jpa.properties.hibernate.format_sql=true
