--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-server.port=80
-spring.datasource.url=10.0.0.204/:3306/database
+server.port=8080
+spring.datasource.url==jdbc:mysql://localhost:3306/database
 spring.datasource.username =root
 spring.datasource.password =890718Jamesito*
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
