--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 server.port=8080
-spring.datasource.url==jdbc:mysql://localhost:3306/database
-spring.datasource.username =root
-spring.datasource.password =890718Jamesito*
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql:/localhost/:33060/database
+spring.datasource.username=root
+spring.datasource.password=890718Jamesito*
 spring.jpa.hibernate.ddl-auto=create
 # server.port=8080
 #spring.datasource.url=jdbc:h2:mem:testdb
