--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql:/localhost/:33060/database
+spring.datasource.url=jdbc:mysql:/10.0.0.204/:33060/database
 spring.datasource.username=root
 spring.datasource.password=890718Jamesito*
 spring.jpa.hibernate.ddl-auto=create
