--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql:/localhost/:3306/database
+spring.datasource.url=jdbc:mysql:/localhost/:3306
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
