--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql:/localhost/:3306
+spring.datasource.url=jdbc:mysql:/localhost/:3306/database
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=890718Jamesito*
 spring.jpa.hibernate.ddl-auto=create
 # server.port=8080
 #spring.datasource.url=jdbc:h2:mem:testdb
