--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql:/localhost/:3306/database
+spring.datasource.url=jdbc:mysql:/localhost/:33060/database
 spring.datasource.username=root
 spring.datasource.password=890718Jamesito*
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.generate-ddl=true
 # server.port=8080
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driver-class-name=org.h2.Driver
