--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:33060/database?useunicode=true&characterEncoding=utf8&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:33060/datos
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=890718Jamesito*
 spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.generate-ddl=true
