--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 #spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/datos
-#spring.datasource.username=admin
-#spring.datasource.password=890718
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/datos
+spring.datasource.username=admin
+spring.datasource.password=890718
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+
+#server.port=8080
+#spring.datasource.url=jdbc:mysql://localhost:3306/basedatos
+#spring.datasource.username = root
+#spring.datasource.password = 890718
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=create
-
-server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/basedatos
-spring.datasource.username = root
-spring.datasource.password = 890718
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
 
 
 
