--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #spring.jpa.hibernate.ddl-auto=update
+server.port=8080
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/datos
 spring.datasource.username=admin
 spring.datasource.password=890718
