--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #spring.jpa.hibernate.ddl-auto=update
 server.port=8080
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/datos
-spring.datasource.username=admin
-spring.datasource.password=890718
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/basemoto
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 
