--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 server.port=8080
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/basemoto
 spring.datasource.username=springuser
