--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 
 #server.port=8080
-#spring.datasource.url=jdbc:mysql://localhost:3306/moto
+#spring.datasource.url=jdbc:mysql://localhost:3306/basedatos
 #spring.datasource.username = root
-#spring.datasource.password = 1914
+#spring.datasource.password = 890718
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=create
 
