--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,20 @@ spring.datasource.password = 1914
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 
+#spring.datasource.url =jdbc:h2:mem:testdb1
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username =sa
+#spring.datasource.password =password
+#spring.jpa.database-platforms=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.generate-ddl=true
+#server.port = 8080
+#logging.level.org.hibernate.sql=debug
+#spring.h2.console.enabled=false
+#
+#spring.jpa.show-sql=true
+
+
 
 #server.port=8080
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/basemoto
@@ -16,27 +30,3 @@ spring.jpa.hibernate.ddl-auto=create
 
 
 
-
-
-
-
-
-
-#server.port=8080
-#spring.datasource.url=jdbc:mysql://localhost:3306/datos
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.generate-ddl=true
-# server.port=8080
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.database-platform=org.hibernate.dialect.Mysql8Dialect
-#Mostrar mensajes SQL
-#spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
