--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/moto
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/basemoto
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
