--- a/src/main/resources/application-diego.properties
+++ b/src/main/resources/application-diego.properties
@@ -1,5 +1,11 @@
 #server.port=8080
 
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/moto
+spring.datasource.username = root
+spring.datasource.password = 1914
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
 
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/basedatos
