--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
     <properties>
         <java.version>11</java.version>
     </properties>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <source>11</source>
+            <target>11</target>
+        </configuration>
+    </plugin>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
