--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-##server.port=80
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/basemoto
-#spring.datasource.username=springuser
-#spring.datasource.password=ThePassword
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=create
+server.port=80
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/basemoto
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
 
 #spring.datasource.url =jdbc:h2:mem:testdb1
 #spring.datasource.driverClassName=org.h2.Driver
@@ -12,12 +12,12 @@
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.generate-ddl=true
-server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/basedatos
-spring.datasource.username = root
-spring.datasource.password = 890718
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+#server.port=8080
+#spring.datasource.url=jdbc:mysql://localhost:3306/basedatos
+#spring.datasource.username = root
+#spring.datasource.password = 890718
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create
 
 
 
