--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/moto
 spring.datasource.username = root
 spring.datasource.password = 1914
+spring.jpa.hibernate.ddl-auto = create
 
 #server.port=80
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/basemoto
