--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,17 +1,16 @@
 
-server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/moto
-spring.datasource.username = root
-spring.datasource.password = 1914
-spring.jpa.hibernate.ddl-auto = create
+#server.port=8080
+#spring.datasource.url=jdbc:mysql://localhost:3306/moto
+#spring.datasource.username = root
+#spring.datasource.password = 1914
+#spring.jpa.hibernate.ddl-auto = create
 
-#server.port=80
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/basemoto
-#spring.datasource.username=springuser
-#spring.datasource.password=ThePassword
-#>>>>>>> 8eded3e3a1da531acde110faba8ccf624bc3cdf7
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=create
+server.port=8080
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/basemoto
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
 
 #spring.datasource.url =jdbc:h2:mem:testdb1
 #spring.datasource.driverClassName=org.h2.Driver
